--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 version: "3.8"
 services:
-
-  api_service:
-    build: .
-    restart: always
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
+#  api_service:
+#    build: .
+#    restart: always
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - db
   db:
     image: mysql
     restart: always
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: test123
-      MYSQL_DATABASE: bankingPcha
+      MYSQL_DATABASE: banking-pcha
