--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,9 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+tasks.named('jar') {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
+    }
+}
